Added fb button

--- a/xperiences/socialauth/templates/sign_up.html
+++ b/xperiences/socialauth/templates/sign_up.html
@@ -72,9 +72,7 @@
 	<div class="command-bar-container"></div>
 	<div id="login" class="panel">
 		Please login using facebook!
-		<a href="javascript:void(0);" onclick='facebook_onlogin();' class="fb-connect" style='font-size:150%;'>
-			 <div class="fb-login-button">Login with Facebook</div>
-		</a>
+		<a href="javascript:void(0);" onclick='facebook_onlogin();' class="fb-connect">Login <span class="text-80">with</span> Facebook</a>
 	</div>
 
     <div id="content" class="clearfix signup">
