--- a/xperiences/media/css/style.css
+++ b/xperiences/media/css/style.css
@@ -595,6 +595,10 @@ footer .copyright {
 	clear: both;
 }
 
+.text-80 {
+	font-size: 80%;
+}
+
 /**
  * Image carasoul
  */
@@ -819,4 +823,21 @@ ul.listings li.listing-item {
 	font-size: 20pt;
 	text-align: center;
 	margin: 0 auto;
+}
+
+.fb-connect {
+	display: inline-block;
+	border: 1px solid #355891;
+	font-size: 17pt;
+	border-radius: 3px;
+	padding: 5px 10px 5px 50px;
+	color: white;
+	text-decoration: none;
+	background: #617fb3 url(../images/fb-logo.png) no-repeat left;
+	text-shadow: 1px 1px #666;
+}
+
+.fb-connect:hover {
+	box-shadow: 0px 0px 3px #666;
+	text-decoration: none;
 }
