nothing in particular

--- a/xperiences/merchants/templates/merchants/register.html
+++ b/xperiences/merchants/templates/merchants/register.html
@@ -63,7 +63,7 @@
 						</select>
 					</div>
 				</div>
-			</address> Not sure how the address field looks-->
+			</address><!-- Not sure how the address field looks-->
 		</fieldset>
 
 		<fieldset>
