small style changes

--- a/xperiences/experiences/templates/experiences/index.html
+++ b/xperiences/experiences/templates/experiences/index.html
@@ -17,7 +17,7 @@
 <div id="front-page">
 	<div class="top-spacer"></div>
 	<div class="image-grid"></div>
-	<div id="search-box">
+	<div id="search-box" class="panel">
 		<!--			<div class="search-box-tagline">
 			A whole new experience for your child starts here
 		</div>-->
