I added django template tag in line 25 for experience.unit_name. We need to take it from there, because that's where the unit is stored.

--- a/xperiences/experiences/templates/experiences/experience_profile.html
+++ b/xperiences/experiences/templates/experiences/experience_profile.html
@@ -22,7 +22,7 @@
 			<div id="action-bar" class="panel">
 				<div class="price">
 					${{ experience.price }}<a href="#"></a><!-- the href is for when we will quote in different currencies... thinking far ahead here :-) -->
-					<span class="unit">per session</span><!-- this per session will have ot be replaced by the unit type -->
+					<span class="unit">{{ experience.unit_name }}</span><!-- this per session will have ot be replaced by the unit type -->
 				</div>
 				<div class="section">
 					<span class="label">When?</span>
