added the start page, and linked it to the 'start selling' button in the header. From there the user goes to sign-up via FB and to apply to our site. I cannot test FB locally yet. This page needs design urgently.

--- a/xperiences/templates/header.html
+++ b/xperiences/templates/header.html
@@ -4,7 +4,7 @@
 		<a id="logo" href="/">
 			<span id="logo-come">Come</span><span id="logo-play">Play</span><span id="logo-learn">Learn</span>
 		</a>
-		<a id="service-list" href="/merchants/register">List your activity</a>
+		<a id="service-list" href="/start">Start selling</a>
 		<div class="clear"></div>
 	</div>
 </header>
