static pages and linking them to the footer.

--- a/xperiences/templates/contact.html
+++ b/xperiences/templates/contact.html
@@ -7,6 +7,6 @@
             This can be hidden if not in use
         </div>-->
         </div>
-        TERMS AND CONDITIONS WILL COME HERE. 
+        CONTACT FORM WILL COME HERE
     </div>
 {% endblock %}
