--- a/xperiences/templates/footer.html
+++ b/xperiences/templates/footer.html
@@ -2,10 +2,20 @@
 	<footer>
 	<div class="footer-constrain">
 		<ul class="footer-nav">
-			<li>About</li>
-			<li>Contact</li>
+			<li>
+				<a href="/about">About</a>
+			</li>
+			<li>
+				<a href="/terms">Terms</a>
+			</li>			<!--<li>
+				<a href="/jobs">Jobs</a>
+			</li>-->
+			<li>
+				<a href="/contact">Contact</a>
+			</li>
+			
 		</ul>
-		<div class="copyright">© 2011 Come Play Learn</div>
+		<div class="copyright">© 2011 NaanProfit</div>
 	</div>
 	</footer>
 {% endblock %}
