early integration of new base.css

--- a/xperiences/experiences/templates/experiences/index.html
+++ b/xperiences/experiences/templates/experiences/index.html
@@ -17,17 +17,16 @@
 <div id="front-page">
 	<div class="top-spacer"></div>
 	<div class="image-grid"></div>
-	<div id="search-box" class="panel">
-		<!--			<div class="search-box-tagline">
-			A whole new experience for your child starts here
-		</div>-->
-		<form class="search-box-form">
+	<div id="search-box" class="panel span9">
+		<div class="pad15">
+		<form>
 			I want to find
-			<input class="default shorter" type="text" alt="activities"/>
+			<input class="default span2" type="text" alt="activities"/>
 			near
-			<input class="default short" type="text" alt="address or zip code"/>
-			<input type="submit" value="search" />
+			<input class="default span3" type="text" alt="address or zip code"/>
+			<input class="btn" type="submit" value="search" />
 		</form>
+	</div>
 	</div>
 	
 	<div class="clear"></div>
