--- a/xperiences/templates/header.html
+++ b/xperiences/templates/header.html
@@ -2,7 +2,7 @@
 <header>
 	<div class="header-wrap">
 		<a id="logo" href="/">
-			<span id="logo-come">Come</span><span id="logo-play">Play</span><span id="logo-learn">Learn</span>
+			naanprofit
 		</a>
 		<a id="service-list" href="/merchants/register">List your activity</a>
 		<div class="clear"></div>
