--- a/xperiences/templates/layout.html
+++ b/xperiences/templates/layout.html
@@ -13,6 +13,7 @@
 			image_autoscale($('.image-wrapper img'));
 		});
 	</script>
+	<link rel="stylesheet" href="{{ MEDIA_URL }}css/base.css">
 	<link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css">
 	<title>{% block title %}{% endblock %}</title>    
 	{% block extra_head %}{% endblock %}
