fixed the links in the command-bar, which is in all of the merchant's dashboard pages. We need to abstract this into another template. Now all merchant dashboard pages are displaying and we can apply CSS. However the templates need a lot of work - the guys in Israel should know how to finish this up.

--- a/xperiences/merchants/templates/merchants/experiences.html
+++ b/xperiences/merchants/templates/merchants/experiences.html
@@ -38,13 +38,13 @@
     <div class="main-content">
             <div class="command-bar-container">
                 <div class="command-bar">
-                    <ul>
-                        <li><a href="add_experience.html">Add new listing</a></li>
-                        <li><a href="#">View all your listings</a></li>
-                        <li><a href="inbox.html">Inbox</a></li>
-                        <li><a href="account.html">Account</a></li>
-                    </ul>			
-                </div>
+                <ul>
+                    <li><a href="/experiences/add_experience">Add new listing</a></li>
+                    <li><a href="/merchants/experiences">View all your listings</a></li>
+                    <li><a href="/merchants/inbox">Inbox</a></li>
+                    <li><a href="/merchants/account">Account</a></li>
+                </ul>			
+            </div>
             </div>
             <div class="listings-container">
                 <ul class="listings">
