--- a/xperiences/merchants/templates/merchants/inbox.html
+++ b/xperiences/merchants/templates/merchants/inbox.html
@@ -4,10 +4,10 @@
         <div class="command-bar-container">
             <div class="command-bar">
                 <ul>
-                    <li><a href="add_experience.html">Add new listing</a></li>
-                    <li><a href="#">View all your listings</a></li>
-                    <li><a href="inbox.html">Inbox</a></li>
-                    <li><a href="account.html">Account</a></li>
+                    <li><a href="/experiences/add_experience">Add new listing</a></li>
+                    <li><a href="/merchants/experiences">View all your listings</a></li>
+                    <li><a href="/merchants/inbox">Inbox</a></li>
+                    <li><a href="/merchants/account">Account</a></li>
                 </ul>			
             </div>
         </div>
@@ -23,12 +23,12 @@
                         </a>
                         <div class="user-name">
                         {% if message.sender %}
-                            {% message.sender %} <!-- not sure where the comments model is; this is probably wrong, I need the sender's name -->
+                            {% comment %}{% message.sender %}{% endcomment %} <!-- not sure where the comments model is; this is probably wrong, I need the sender's name -->
                         {% endif %}                 
                         </div>
                         <div class="user-location">
                         {% if message.sender %}
-                            {% some django call for sender's location here %}<!-- not sure where to take this from... -->
+                            {% comment %}{% some django call for sender's location here %}{% endcomment %} <!-- not sure where to take this from... -->
                         {% endif %}  
                         </div>
                     </div>    
